--- a/app/src/main/res/layout/detailed.xml
+++ b/app/src/main/res/layout/detailed.xml
@@ -27,7 +27,6 @@
         android:textColor="@color/white"
         android:text="Detailed"
         android:textSize="20sp"
-        app:cornerRadius="15dp"
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
         android:paddingTop="20dp"
@@ -42,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="42sp"
-        android:textColor="@color/white"
+        android:textColor="#FFFFFFFF"
         android:gravity="center_horizontal"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/bellota"
@@ -79,7 +78,7 @@
             android:layout_height="wrap_content"
             android:textSize="21sp"
             android:padding="20dp"
-            android:textColor="@color/white"
+            android:textColor="#FFFF9677"
             android:gravity="center_horizontal"
             android:fontFamily="@font/bellota"
 
