--- a/app/src/main/res/layout/retelling.xml
+++ b/app/src/main/res/layout/retelling.xml
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:textSize="21sp"
             android:padding="20dp"
-            android:textColor="@color/white"
+            android:textColor="#FF41436A"
             android:gravity="center_horizontal"
             android:fontFamily="@font/bellota"
 
